--- a/src/styles2.css
+++ b/src/styles2.css
@@ -174,6 +174,7 @@ footer {
 }
 
 
+
 /* ========================= */
 /* RESPONSIVENESS STARTS HERE */
 /* ========================= */
@@ -265,7 +266,8 @@ footer {
   }
 
   .nav-links {
-    display: none; /* Optional: hide nav links for minimal mobile view */
+   
+  display:contents;
   }
 
   .hero {
@@ -427,6 +429,8 @@ footer {
     transform: translateY(0);
   }
 }
+
+
 
 
 
